========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2016-03-21

  - Fixed bug in beancount.ingest.file whereby two files being filed to the same
    destination filename would clobber each other; with this fix, instead, an
    error will be generated.


2016-03-20

  - Implemented beancount.ingest.importers.regexp and
    beancount.ingest.importers.config mixin classes to help support
    functionality which used to be available in LedgerHub.

  - Removed the temporary beancount.ingest.importers.compat
    backwards-compatibility helper for LedgerHub. Not needed.

  - Completed the documentation for the new import framework "beancount.ingest".
    The document is here:
    http://furius.ca/beancount/doc/ingest


2016-03-19

  - Centralized the <3.4 and >=3.4 support for Enum class into
    beancount.utils.misc_utils.Enum.

  - Added an option to the OFX importer to let the instantiator decides whether
    a balance directive should not be inserted (NONE), should be inserted at the
    declared date of a <ledgerbal> tag (DECLARED), or right after the last entry
    imported from the file (LAST).


2016-03-18

  - Merged 'web_months' branch modified from changes originally submitted by
    Dave Stephens, which implements a monthly view. You enter the monthly view
    from the annual view.


2016-03-14

  - Added META() and ENTRY_META() functions to the SQL shell to answer a
    question on the mailing-list (from richieuk63 at gmail dot com).

  - Fixed a bug with the OFX importer whereby the Balance directive should be
    generated to a day following the date provided in the LEDGERBAL directive.

  - Added forgotten dependency on "beautifulsoup4" in setup.py.


2016-03-13

  - Merged more changes from the 'ingest' branch which furthers the work of
    integrating the LedgerHub code into Beancount (almost done now).
